# C_TP_Homework2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  consistent_realization.c  console_communication.c  console_communication.h  main.c  parallel_realization.c  parallel_realization.h
Google_tests/: CMakeLists.txt  tests.cpp
consistent/: consistent_realization.c  consistent_realization.h
files/: test1.txt  test2.txt
parallel/: parallel_realization.c  parallel_realization.h
